syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.melli.wallet.grpc";
option java_outer_classname = "TransactionProto";

package wallet;

import "base.proto";

// Transaction Service
service TransactionService {
  rpc GetLastTransaction(GetLastTransactionRequestGrpc) returns (BaseResponseGrpc) {}
  rpc GenerateReport(GenerateReportRequestGrpc) returns (BaseResponseGrpc) {}
}

// Request Messages
message GetLastTransactionRequestGrpc {
  string national_code = 1;
  string account_number = 2;
}

message GenerateReportRequestGrpc {
  map<string, string> search_map = 1;
}
