syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.melli.wallet.grpc";
option java_outer_classname = "WalletProto";

package wallet;

import "base.proto";

// Wallet Service
service WalletService {
  rpc CreateWallet(CreateWalletRequestGrpc) returns (BaseResponseGrpc) {}
  rpc DeactivateWallet(DeactivateWalletRequestGrpc) returns (BaseResponseGrpc) {}
  rpc DeleteWallet(DeleteWalletRequestGrpc) returns (BaseResponseGrpc) {}
  rpc GetWallet(GetWalletRequestGrpc) returns (BaseResponseGrpc) {}
  rpc ActivateWallet(ActivateWalletRequestGrpc) returns (BaseResponseGrpc) {}
}

// Request Messages
message CreateWalletRequestGrpc {
  string mobile = 1;
  string national_code = 2;
}

message DeactivateWalletRequestGrpc {
  string id = 1;
}

message DeleteWalletRequestGrpc {
  string id = 1;
}

message GetWalletRequestGrpc {
  string national_code = 1;
}

message ActivateWalletRequestGrpc {
  string id = 1;
}